--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
-  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media(min-width: 768px){
+  .App{
+    width: 67%;
+
+  }
+  
+}
+
+.container{
+  padding: 0 15px;
 }
 
 .App-logo {
@@ -11,6 +26,14 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.button{
+  background-color: #007bff;
+  color: white;
+  padding: .375rem .75rem;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
 }
 
 .App-header {
